Buf Fix: Index.html

--- a/index.html
+++ b/index.html
@@ -36,17 +36,15 @@
         });
         // and to finish, let's boot the app!
         System.import('bootstrap');
-        })
     </script>
     <title>Angular</title>
 </head>
 
 <body>
-    <ponyracer-app>
+    <inventory-app>
         You Will See Me While Angular Starts The App!
-    </ponyracer-app>
+    </inventory-app>
 
 </body>
 
 </html>
-html>
